@@ -9,7 +9,6 @@ pref("gconversation.button.unfold_all", true);
 pref("gconversation.button.fold_all", true);
 pref("gconversation.button.mark_as_read", true);
 pref("gconversation.button.open_in_new_tab", true);
-pref("gconversation.html", true);
 pref("gconversation.focus_first", false);
 pref("gconversation.reverse_order", false);
 pref("gconversation.auto_fetch", true);
