@@ -118,3 +118,4 @@ a {
 .showhidequote {
   color: #512a45;
 }
+
